--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -19,6 +19,7 @@
     "modalTitle": "Calendar"
   },
   "calendar_training_page": {
+    "back": "Back",
     "new_template": "New Template"
   },
   "clients_page": {
@@ -26,5 +27,20 @@
     "new_client": "New Client",
     "current": "Current",
     "archive": "Archive"
+  },
+  "client_profile_page" : {
+    "back": "Back",
+    "edit": "Edit",
+    "paid_till": "Paid till",
+    "workouts": "workouts",
+    "trainings": "Trainings",
+    "info": "Info",
+    "new_template": "New Template"
+  },
+  "trainings_page": {
+    "title": "Trainings",
+    "new_template": "New Template",
+    "templates": "Templates",
+    "exercises": "Exercises"
   }
 }
