data now come from models

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -29,6 +29,7 @@
     "archive": "Archive"
   },
   "client_profile_page" : {
+    "title": "Client Profile",
     "back": "Back",
     "edit": "Edit",
     "paid_till": "Paid till",
