--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,5 +1,6 @@
 {
   "app_title": "Fitness App",
+  "back": "Back",
   "days": {
     "monday": "Mon",
     "tuesday": "Tue",
@@ -33,13 +34,25 @@
   },
   "client_profile_page" : {
     "title": "Client Profile",
-    "back": "Back",
     "edit": "Edit",
     "paid_till": "Paid till",
     "workouts": "workouts",
-    "trainings": "Trainings",
-    "info": "Info",
-    "new_template": "New Template"
+    "trainings": {
+      "title": "Trainings",
+      "empty": "The Client doesn’t has any training.\nPlease add from template or create new.",
+      "add" : "Add training",
+      "new_training": "New Training"
+    },
+    "info": {
+      "slider": "Info",
+      "weight": "Weight",
+      "birthday": "Birthday",
+      "training": "Training",
+      "goal": "Client Goal",
+      "features": "Client Features",
+      "phone": "Client Phone",
+      "archive": "Move to Archive"
+    }
   },
   "trainings_page": {
     "title": "Trainings",
