static close to finish

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -24,7 +24,7 @@
     "new_exercise": "New Exercise",
     "client_name": "Client Name",
     "training_name": "Training Name",
-    "training_notes": "Traning notes about something can be that long or shot or"
+    "training_notes": "Training notes about something can be that long or shot or"
   },
   "clients_page": {
     "title": "Clients",
@@ -32,7 +32,25 @@
     "current": "Current",
     "archive": "Archive"
   },
-  "client_profile_page" : {
+  "client_edit_page": {
+    "title": {
+      "edit": "Edit Client",
+      "new": "New Client"
+    },
+    "save": "Save",
+    "done": "Done",
+    "name": "Name",
+    "phone": "Phone Number",
+    "birthday": "Birthday",
+    "weight": "Weight",
+    "goal": "Client Goal",
+    "note": "Client Note",
+    "select_date_title": "Select days and setup the time",
+    "schedule": "Schedule",
+    "time": "Time",
+    "paid_training": "Paid training"
+  },
+  "client_profile_page": {
     "title": "Client Profile",
     "edit": "Edit",
     "paid_till": "Paid till",
@@ -40,7 +58,7 @@
     "trainings": {
       "title": "Trainings",
       "empty": "The Client doesn’t has any training.\nPlease add from template or create new.",
-      "add" : "Add training",
+      "add": "Add training",
       "new_training": "New Training"
     },
     "info": {
@@ -54,10 +72,53 @@
       "archive": "Move to Archive"
     }
   },
+  "new_training_page": {
+    "title": "New Training",
+    "name": "Training Name",
+    "description": "Training description",
+    "add": {
+      "exercise":"New Exercise",
+      "template": "Add from templates",
+      "previous": "Add from previous"
+    },
+    "create": "Create training"
+  },
   "trainings_page": {
     "title": "Trainings",
     "new_template": "New Template",
     "templates": "Templates",
-    "exercises": "Exercises"
+    "exercises": "Exercises",
+    "search": {
+      "templates": "Templates",
+      "exercises": "Exercises"
+    }
+  },
+  "exercise_page": {
+    "title": "Exercise",
+    "edit": "Edit",
+    "name": "Exercise Name",
+    "description": "Exercise Description",
+    "units": {
+      "title": "Select Units",
+      "weight_reps": "Weight (kg)/Reps (times)",
+      "distance_time": "Distance (km)/Time (min)",
+      "reps_time": "Reps (times)/Time (min)",
+      "custom": "Add custom"
+    }
+  },
+  "template_page": {
+    "title": "New Template",
+    "name": "Template Name",
+    "description": "Template Description",
+    "add": {
+      "exercise":"Add Exercise",
+      "template": "Add from templates",
+      "previous": "Add from previous"
+    },
+    "create": "Create training"
+  },
+  "search_exercise_page": {
+    "title": "Exercises",
+    "add": "Add Exercise"
   }
 }
