beta refactored visually

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -24,7 +24,8 @@
     "new_exercise": "New Exercise",
     "client_name": "Client Name",
     "training_name": "Training Name",
-    "training_notes": "Training notes about something can be that long or shot or"
+    "training_notes": "Training notes about something can be that long or shot or",
+    "today": "Today"
   },
   "clients_page": {
     "title": "Clients",
@@ -106,7 +107,8 @@
     "exercises": "Exercises",
     "search": {
       "templates": "Templates",
-      "exercises": "Exercises"
+      "exercises": "Exercises",
+      "cancel": "Cancel"
     }
   },
   "exercise_page": {
@@ -155,6 +157,8 @@
   },
   "search_exercise_page": {
     "title": "Exercises",
-    "add": "Add Exercise"
+    "add": "Add Exercise",
+    "new_exercise": "New Exercise",
+    "no_exercise_label": "Looks like there is no exercise you are looking for. Create a new one?"
   }
 }
