refactored code and especially have split logic from templates

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -116,6 +116,7 @@
       "edit":"Exercise",
       "new": "New Exercise"
     },
+    "cancel": "Cancel",
     "edit": "Edit",
     "save": "Save Exercise",
     "name": "Exercise Name",
